--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vite-vue2-starter</title>
     <style>
+	    * {
+		    box-sizing: border-box;
+	    }
       body {
         margin: 0;
         padding: 0;
@@ -13,6 +16,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
