--- a/index.html
+++ b/index.html
@@ -3,16 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-vue2-starter</title>
-    <style>
-	    * {
-		    box-sizing: border-box;
-	    }
-      body {
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <title>Vite Vue2 Typescript Starter</title>
   </head>
   <body>
     <div id="app"></div>
